Support all variations of LIKE criteria (#3003)